[workspace]
members = ["crates/cast_viewer"]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1

[patch.crates-io]
iced = { git = "https://github.com/dtzxporter/iced", rev = "9329aa3fd34f70cda4eef678cc024eb845918f85" }

# These are for porter-app for now.
[workspace.dependencies]
bincode = { version = "2.0", default-features = false, features = ["std", "derive"] }
bitflags = "2.9"
directories = "6.0"
iced = { version = "0.14.0-dev", default-features = false, features = [
    "image-without-codecs",
    "canvas",
    "advanced",
    "wgpu-without-backends",
] }
lyon_algorithms = { version = "1.0", default-features = false }
rfd = { version = "0.15", default-features = false, features = ["gtk3", "common-controls-v6"] }
unicode-segmentation = "1.11"
raw-window-handle = { version = "0.6", default-features = false }
windows-sys = { version = "0.60", default-features = false, features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Networking_WinHttp",
    "Wdk_System_SystemInformation",
] }
